# trade-archivist

./: Cargo.toml  README.md
src/: api.rs  archivist.rs  cli.rs  errors.rs  lib.rs
src/exchange/: binance.rs  mod.rs
src/order_book/: mod.rs  navigation.rs  storage.rs
tests/: api_client_server_tests.rs  book_serialization_test.rs
