[package]
name = "trade-archivist"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Mavreshko <kimavr@gmail.com>"]

[lib]
name = "trade_archivist"
path = "src/lib.rs"

[[bin]]
name = "archivist-cli"
path = "src/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "*"
log = "0.4"
simplelog = { version = "^0.11.0", features = ["paris"] }
chrono = "0.4"
bzip2 = "0.4"
rust_decimal = { version = "1.28", features = ["std"] }
rust_decimal_macros = "1.28"
byteorder = "1"
futures-util = "0.3"
isahc = "1.6"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
# according to
# https://blog.logrocket.com/rust-serialization-whats-ready-for-production-today/
# bincode is the fastes Rust serializer
bincode = "1.3"
bytes = "1"
walkdir = "2"
clap = { version = "3.0.4", features = ["derive"] }
